<resources>
    <string name="app_name">MovieApp</string>
    <string name="search">Search</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_score">Movie Score</string>
    <string name="movie_category">Movie category</string>
    <string name="something_went_wrong">Something went wrong: %1$s</string>
    <string name="retry">Retry</string>
    <string name="add_a_comment">Add a comment…</string>
    <string name="movie_description">Movie Description</string>
    <string name="like">Like</string>
    <string name="comment">COMMENT</string>
    <string name="comments">Comments</string>
    <string name="images">Images</string>
    <string name="buttonImage">ButtonImage</string>
    <string name="time_created">Time Created</string>
</resources>