<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scroll"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/movie_image"
            android:layout_width="150dp"
            android:layout_height="230dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movie_ratings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:background="@color/dark_primary_trans"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/movie_score"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/white"
                app:drawableEndCompat="@drawable/ic_baseline_star_24" />

            <TextView
                android:id="@+id/count_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="Comment Count"
                android:textAppearance="?attr/textAppearanceCaption"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="center"
                android:text="Count"
                android:textAppearance="?attr/textAppearanceBody2" />

            <TextView
                android:id="@+id/screen_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="Screening"
                android:textAppearance="?attr/textAppearanceCaption"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/movie_screening"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="center"
                android:text="Location"
                android:textAppearance="?attr/textAppearanceBody2" />

            <TextView
                android:id="@+id/duration_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="Duration"
                android:textAppearance="?attr/textAppearanceCaption"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/movie_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="center"
                android:text="Time"
                android:textAppearance="?attr/textAppearanceBody2" />


        </LinearLayout>

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/movie_image"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="-50dp"
            android:text="@string/movie_title"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceHeadline5" />

        <TextView
            android:id="@+id/movie_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/movie_title"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="-15dp"
            android:text="@string/movie_category"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceCaption" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignTop="@+id/movie_genre"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/movie_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:gravity="start"
                android:text="@string/movie_description"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sourceTextFiled"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                app:boxStrokeWidth="2dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movie_description"
                app:endIconDrawable="@drawable/ic_baseline_send_24"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences|textMultiLine"
                    android:padding="15dp"
                    android:hint="@string/add_a_comment"
                    app:layout_constraintTop_toBottomOf="@+id/movie_description"
                    app:strokeColor="@color/dark_primary_trans"
                    app:strokeWidth="0.8dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:stepSize="1"
                app:layout_constraintTop_toBottomOf="@+id/sourceTextFiled" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>
</ScrollView>


